--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroui/react": "^2.6.14",
     "framer-motion": "^12.0.11",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
